--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "vue-router": "^3.5.4",
+        "vuedraggable": "^2.24.3",
         "vuetify": "^2.6.10"
     }
 }
