--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.7.10"
     },
     "dependencies": {
+        "vue-number-animation": "^1.1.2",
         "vue-router": "^3.5.4",
         "vuedraggable": "^2.24.3",
         "vuetify": "^2.6.10"
