--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,7 +2,8 @@
     "/js/app.js": "/js/app.js",
     "/js/login.js": "/js/login.js",
     "/js/admin.js": "/js/admin.js",
-    "/css/admin.css": "/css/admin.css",
+    "/js/super-admin.js": "/js/super-admin.js",
+    "/css/super-admin.css": "/css/super-admin.css",
     "/css/login.css": "/css/login.css",
     "/css/app.css": "/css/app.css"
 }
