--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "vue-template-compiler": "^2.7.10"
     },
     "dependencies": {
+        "apexcharts": "^3.35.5",
+        "vue-apexcharts": "^1.6.2",
         "vue-number-animation": "^1.1.2",
         "vue-router": "^3.5.4",
         "vuedraggable": "^2.24.3",
